# ARES7-v2-Turbo

./: .env.template  .gitignore  AI_EVALUATION_PROMPT.md  ARES7_Comprehensive_Validation_Report.md  ARES7_Deployment_Guide_v5.md  ARES7_Final_Performance_Report_v5.md  ARES7_Operations_Manual_v4.md  ARES_ULTIMATE_DEPLOYMENT_REPORT.md  DATA_CONNECTOR_MASTER_PLAN.md  EC2_DEPLOYMENT_GUIDE.md  LIVE_TRADING_SETUP.md  PHASE1_VALIDATION_REPORT.md  README.md  install.sh  main.py  polygon_flatfiles_loader.py  pyproject.toml  requirements.txt  run_ai_evaluation.py  run_ai_evaluation_v2.py  run_turbo_backtest.py  test_ec2_quick_validation.py  test_phase1_validation.py  test_quick_validation.py  test_s3_list.py
alpha/: sideways_regime_alpha.py
automation/: monthly_validation_schedule.py  weekly_capacity_check.py
backtest/: __init__.py  ares7_integrated_backtest.py  calculate_performance_metrics.py  integrated_final_test.py  load_real_data.py  metrics.py  run_backtest.py  run_final_validation.py  turbo_cpu_backtest.py
brokers/: __init__.py  base_broker.py  ibkr_client.py  kis_client.py
config/: ares7_qm_turbo_final_251129.yaml  brokers.yaml  data_sources.yaml  production.yaml
core/: __init__.py  interfaces.py  utils.py
data/: __init__.py  fred_client.py  news_client.py  polygon_client.py  polygon_flatfiles_daily_loader.py  polygon_parallel_loader.py  sec_client.py  sf1_client.py  tavily_client.py  unified_data_connector.py
deployment/: aws_gpu_setup.md
engines/: __init__.py
ensemble/: __init__.py  dynamic_ensemble.py  turbo_aarm.py
governance/: audit_trail.py  audit_trail_enhanced.py  dead_man_switch.py  level6_integration.py  report_generator.py
guardrails/: guardrails_v3_relaxed.py
monitoring/: __init__.py  api.py  state.py  store.py
optimization/: gpu_portfolio_optimizer.py  leverage_grid_search.py  rvol_efficiency_curve.py  rvol_target_optimization.py
orchestration/: __init__.py  live_orchestrator.py  scheduler.py
portfolio/: universe_selection.py
risk/: __init__.py  aarm_core.py  cvar_utils.py  regime_filter.py
(+13 files in other folders)
